# rendering-engine

./: CMakeLists.txt  LICENSE  Light.h  Math.h  Matrix4d.h  README.md  Shader.h  Triangle.h  Vector3d.h  Vector4d.h  main.cpp
Data/: lab4A.in  lab4B.in  lab4C.in  lab4D.in  simple.in  test.in
Mesh/: Grid4x4.asc  bench.asc  drop.asc  glass.asc  skull.asc
include/GL/: freeglut_ext.h  freeglut_std.h
